MongoDB connection - Mongoose/Cluster library Advanced React - context API implementation in the demo app.

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -22,3 +22,8 @@ button:focus { box-shadow: none !important; }
     height: auto !important;
     overflow-y: auto !important;
 }
+.drop-content-close {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+}
